--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -16,6 +16,20 @@
         app:layout_constraintBottom_toTopOf="@+id/message"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:indicatorColor="@color/teal_200"
+        app:indicatorSize="72dp"
+        app:layout_constraintBottom_toBottomOf="@+id/list_of_weather"
+        app:layout_constraintEnd_toEndOf="@+id/list_of_weather"
+        app:layout_constraintStart_toStartOf="@+id/list_of_weather"
+        app:layout_constraintTop_toTopOf="@+id/list_of_weather"
+        app:trackColor="@color/light_grey"
+        app:trackThickness="8dp" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/message"
         android:layout_width="0dp"
